<resources>
    <string name="app_name">Customizednavdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="image">image</string>
    <string name="utim_s_account">Utim\'s Account</string>
    <string name="payments">Payments</string>
    <string name="credit_cards">Credit cards</string>
    <string name="accounts">Accounts</string>
    <string name="wallets">Wallets</string>
    <string name="utilities_services">Utilities/services</string>
    <string name="info">Info</string>
    <string name="news">News</string>
    <string name="vouchers">Vouchers</string>
    <string name="how_to_use">How to use</string>
    <string name="notices">Notices</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jobs_careers"><![CDATA[Jobs & Careers]]></string>
</resources>
