<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="23sp"
            android:padding="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_margin="10dp"
            android:text="@string/utim_s_account"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/image" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbarlayout"
        android:weightSum="6"
        android:id="@+id/firstsection"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/payments"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:id="@+id/textviewone"/>
        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_weight="4"
            android:layout_marginStart="-20dp"
            android:background="@drawable/dashed_line"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:layerType="software"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstsection"
        android:weightSum="9"
        android:id="@+id/secondsection"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                android:layout_gravity="center"
                android:id="@+id/creditimage"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_cards"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_box_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accounts"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_balance_wallet_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallets"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondsection"
        android:weightSum="5.5"
        android:id="@+id/thirdsection"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/utilities_services"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:id="@+id/textviewtwo"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="3"
            android:src="@drawable/dashed_line"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:layerType="software"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdsection"
        android:weightSum="9"
        android:id="@+id/fourthsection"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_cards"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_box_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accounts"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_balance_wallet_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallets"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fourthsection"
        android:weightSum="9"
        android:id="@+id/fifthsection"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_cards"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_box_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accounts"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_balance_wallet_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallets"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_below="@+id/fifthsection"
        android:layout_width="wrap_content"
        android:gravity="start"
        android:id="@+id/singlelayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_credit_card_black_24dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_cards"
        android:layout_gravity="center"
        android:gravity="center"/></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/singlelayout"
        android:weightSum="6"
        android:id="@+id/sixthsection"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:id="@+id/textviewthree"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="4.5"
            android:src="@drawable/dashed_line"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:layerType="software"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sixthsection"
        android:weightSum="9"
        android:id="@+id/finalsection"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_card_giftcard_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vouchers"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications_none_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"
        android:layout_margin="15dp"
        android:id="@+id/view"
        android:layout_below="@id/finalsection"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_below="@id/view"
        android:id="@+id/finallayout"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_volume_up_black_24dp"
            android:contentDescription="@string/image"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notices"
            android:layout_weight="4.5"
            android:textStyle="normal"
            android:textSize="18sp"
            android:id="@+id/menu1"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_margin="10dp"
        android:layout_below="@id/finallayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help_outline_black_24dp"
            android:contentDescription="@string/image"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use"
            android:textSize="18sp"
            android:layout_weight="4.5"
            android:id="@+id/menu2"/>


    </LinearLayout>



</RelativeLayout>