<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:weightSum="5"
        android:id="@+id/linearlayout"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">
        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/ivNavMenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_line_weight_24px"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/colorBlack"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/utim_s_account"/>
        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/messageicon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question_answer_black_24dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary">


        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="1dp"
            android:textColor="@color/colorGrey"
            android:drawableTop="@drawable/ic_account_circle_black_24dp"
            android:textAllCaps="false"
            android:text="Followers"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_settings_black_24dp"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="1dp"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey"
            android:text="Following"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="70dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_supervisor_account_black_24dp"
            app:cornerRadius="8dp"
            android:layout_marginStart="10dp"
            app:strokeColor="@color/colorAccent"
            android:textColor="@color/colorGrey"
            app:strokeWidth="1dp"
            android:text="Add Friends"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PEOPLE YOU MAY KNOW"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_supervisor_account_black_24dp"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:scrollbarSize="1dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="12"
            android:background="@color/colorPrimary">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@drawable/ic_add_black_24dp"
                android:src="@drawable/dotted_circle"
                android:contentDescription="@string/image" />


            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:cornerRadius="8dp"
                android:layout_marginStart="10dp"
                app:strokeColor="@color/colorAccent"
                android:textColor="@color/colorGrey"
                app:strokeWidth="1dp"
                android:text="@string/jobs_careers"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:cornerRadius="8dp"
                android:layout_marginStart="10dp"
                app:strokeColor="@color/colorAccent"
                android:textColor="@color/colorGrey"
                app:strokeWidth="1dp"
                android:text="Technology"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:cornerRadius="8dp"
                android:layout_marginStart="10dp"
                app:strokeColor="@color/colorAccent"
                android:textColor="@color/colorGrey"
                app:strokeWidth="1dp"
                android:text="self improvement"/>

        </LinearLayout>

    </HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainrecycler"/>




</LinearLayout>